--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "InterstellarBnb FEC Proxy",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
